[package]
name = "syncmers"
version = "0.1.6"
edition = "2021"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust library for finding syncmers"
repository = "https://github.com/jguhlin/syncmers"
categories = ["science"]
keywords = ["bioinformatics", "fasta", "sequence", "fastq", "syncmers"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
]

[dependencies]
pulp = "0.13.1"
twox-hash = "1.6.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units  = 1

[profile.dev]
debug = true

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "find_syncmers" 
harness = false

